set(COREBLURON_PUBLIC_HEADERS
${COMMON_INCLUDES}
nrnconf.h
nrnoc/md1redef.h
nrnoc/md2redef.h
nrnoc/membfunc.h
nrnoc/multicore.h
nrnoc/nrnoc_ml.h
utils/randoms/nrnran123.h
mech/cfile/scoplib.h
)

set(COREBLURON_HEADERS
nrnmpi/mpispike.h
nrnmpi/nrnmpidec.h
nrnmpi/nrnmpi_def_cinc.h
nrnmpi/nrnmpi.h
nrnmpi/nrnmpi_impl.h
nrnmpi/nrnmpiuse.h
nrnoc/membdef.h
nrnoc/nrnoc_decl.h
nrnoc/nrnpthread.h
nrniv/arraypool.h
nrniv/htlist.h
nrniv/ivlist.h
nrniv/ivocvect.h
nrniv/ivtable.h
nrniv/netcon.h
nrniv/netcvode.h
nrniv/nrnhash_alt.h
nrniv/nrnhash.h
nrniv/nrniv_decl.h
nrniv/nrniv_mf.h
nrniv/nrnmutdec.h
nrniv/output_spikes.h
nrniv/pool.h
nrniv/prcellstate.cpp
nrniv/sptbinq.h
nrniv/sptree.h
nrniv/structpool.h
nrniv/tqueue.h
mech/cfile/cabvars.h
)

set(COREBLURON_SOURCES
${COMMON_SOURCES}
nrnmpi/nrnmpi.c
nrnmpi/mpispike.c
nrnoc/capac.c
nrnoc/eion.c
nrnoc/finitialize.c
nrnoc/fadvance_core.c
nrnoc/hocstub.c
nrnoc/solve_core.c
nrnoc/treeset_core.c
nrnoc/nrnoc_aux.c
nrnoc/register_mech.c
nrnoc/multicore.c
nrnoc/nrntimeout.c
nrniv/corebluron_main.cpp
nrniv/cvodestb.cpp
nrniv/main1.cpp
nrniv/netpar.cpp
nrniv/netcvode.cpp
nrniv/tqueue.cpp
nrniv/htlist.cpp
nrniv/ivlistimpl.cpp
nrniv/ivvect.cpp
nrniv/mk_mech.cpp
nrniv/nrn_setup.cpp
nrniv/output_spikes.cpp
mech/cfile/expsyn.c
mech/cfile/hh.c
mech/cfile/passive.c
mech/cfile/stim.c
mech/cfile/netstim.c
utils/randoms/nrnran123.c
)

set_source_files_properties(mech/cfile/expsyn.c mech/cfile/hh.c mech/cfile/passive.c mech/cfile/stim.c mech/cfile/netstim.c PROPERTIES COMPILE_FLAGS "-Wno-error")

common_library(corebluron)

install(FILES ${CMAKE_BINARY_DIR}/corebluron/CMakeFiles/corebluron.dir/nrniv/corebluron_main.cpp.o DESTINATION lib)
