set(COREBLURON_PUBLIC_HEADERS
${COMMON_INCLUDES}
nrnconf.h
nrnoc/md1redef.h
nrnoc/md2redef.h
nrnoc/membfunc.h
nrnoc/multicore.h
nrnoc/nrnoc_ml.h
utils/randoms/nrnran123.h
utils/endianness.h
utils/swap_endian.h
mech/cfile/scoplib.h
)

set(COREBLURON_HEADERS
nrnmpi/mpispike.h
nrnmpi/nrnmpidec.h
nrnmpi/nrnmpi_def_cinc.h
nrnmpi/nrnmpi.h
nrnmpi/nrnmpi_impl.h
nrnmpi/nrnmpiuse.h
nrnoc/membdef.h
nrnoc/nrnoc_decl.h
nrnoc/nrnpthread.h
nrniv/arraypool.h
nrniv/htlist.h
nrniv/ivlist.h
nrniv/ivocvect.h
nrniv/ivtable.h
nrniv/netcon.h
nrniv/netcvode.h
nrniv/nrn_assert.h
nrniv/nrnhash_alt.h
nrniv/nrnoptarg.h
nrniv/nrnhash.h
nrniv/nrniv_decl.h
nrniv/nrniv_mf.h
nrniv/nrnmutdec.h
nrniv/nrn_datareader.h
nrniv/output_spikes.h
nrniv/pool.h
nrniv/prcellstate.cpp
nrniv/sptbinq.h
nrniv/sptree.h
nrniv/structpool.h
nrniv/tqueue.h
nrniv/vrecitem.h
mech/cfile/cabvars.h
)

set(COREBLURON_SOURCES
${COMMON_SOURCES}
nrnmpi/nrnmpi.c
nrnmpi/mpispike.c
nrnoc/capac.c
nrnoc/eion.c
nrnoc/finitialize.c
nrnoc/fadvance_core.c
nrnoc/hocstub.c
nrnoc/solve_core.c
nrnoc/treeset_core.c
nrnoc/nrnoc_aux.c
nrnoc/register_mech.c
nrnoc/multicore.c
nrnoc/nrntimeout.c
nrniv/corebluron_main.cpp
nrniv/cvodestb.cpp
nrniv/main1.cpp
nrniv/netpar.cpp
nrniv/netcvode.cpp
nrniv/tqueue.cpp
nrniv/htlist.cpp
nrniv/ivlistimpl.cpp
nrniv/ivvect.cpp
nrniv/mk_mech.cpp
nrniv/nrn_setup.cpp
nrniv/nrn_datareader.cpp
nrniv/nrnoptarg.cpp
nrniv/output_spikes.cpp
nrniv/patternstim.cpp
nrniv/vrecord.cpp
mech/cfile/expsyn.c
mech/cfile/hh.c
mech/cfile/passive.c
mech/cfile/stim.c
mech/cfile/netstim.c
mech/cfile/pattern.c
utils/randoms/nrnran123.c
)

set(MECH_FILES
mech/cfile/expsyn.c
mech/cfile/hh.c
mech/cfile/passive.c
mech/cfile/stim.c
mech/cfile/netstim.c
mech/cfile/pattern.c
)

option (COREBLURON_NEURODAMUS_MECHS "Compile CoreBluron with all available mechanisms from Neurodamus" OFF)
if(COREBLURON_NEURODAMUS_MECHS)

  set(COREBLURON_SOURCES
  ${COREBLURON_SOURCES}
  mech/cfile/Ca.c
  mech/cfile/CaDynamics_E2.c
  mech/cfile/Ca_HVA.c
  mech/cfile/Ca_LVAst.c
  mech/cfile/HDF5reader.c
  mech/cfile/Ih.c
  mech/cfile/Im.c
  mech/cfile/K_Pst.c
  mech/cfile/K_Tst.c
  mech/cfile/KdShu2007.c
  mech/cfile/NaTa_t.c
  mech/cfile/NaTs2_t.c
  mech/cfile/Nap_Et2.c
  mech/cfile/ProbAMPANMDA_EMS.c
  mech/cfile/ProbGABAAB_EMS.c
  mech/cfile/SK_E2.c
  mech/cfile/SKv3_1.c
  mech/cfile/StochKv.c
  mech/cfile/netstim_inhpoisson.c
  mech/cfile/new_calcium_channels.c
  mech/cfile/mod_func.c
  )

set(MECH_FILES
  ${MECH_FILES}
  mech/cfile/expsyn.c
  mech/cfile/hh.c
  mech/cfile/passive.c
  mech/cfile/stim.c
  mech/cfile/netstim.c
  mech/cfile/Ca.c
  mech/cfile/CaDynamics_E2.c
  mech/cfile/Ca_HVA.c
  mech/cfile/Ca_LVAst.c
  mech/cfile/HDF5reader.c
  mech/cfile/Ih.c
  mech/cfile/Im.c
  mech/cfile/K_Pst.c
  mech/cfile/K_Tst.c
  mech/cfile/KdShu2007.c
  mech/cfile/NaTa_t.c
  mech/cfile/NaTs2_t.c
  mech/cfile/Nap_Et2.c
  mech/cfile/ProbAMPANMDA_EMS.c
  mech/cfile/ProbGABAAB_EMS.c
  mech/cfile/SK_E2.c
  mech/cfile/SKv3_1.c
  mech/cfile/StochKv.c
  mech/cfile/netstim_inhpoisson.c
  mech/cfile/new_calcium_channels.c
  )

endif()

set_source_files_properties(${MECH_FILES} PROPERTIES COMPILE_FLAGS "-Wno-error")

common_library(corebluron)

install(FILES ${CMAKE_BINARY_DIR}/corebluron/CMakeFiles/corebluron.dir/nrniv/corebluron_main.cpp.o DESTINATION lib)
